Bug 208452 - Unchecking the 'Full Name' check box crashes Kontact
Summary: Unchecking the 'Full Name' check box crashes Kontact
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-25 01:19 UTC by Sabine Faure
Modified: 2009-10-01 23:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-09-25 01:19:58 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kontact and go to KAB
- right click on the 'Name' column heading
- a context menu appears. By default only the 'Full Name' check box is checked in it.
- Uncheck it

Kontact crashes.


Trunk, Svn Rev 1027765
Comment 1 Tobias Koenig 2009-09-28 16:12:54 UTC
SVN commit 1028930 by tokoe:

Do not allow to remove the name column, that is not intended.

BUG: 208452


 M  +1 -0      modelcolumnmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1028930
Comment 2 Sabine Faure 2009-10-01 23:20:46 UTC
It is corrected now.

It is now impossible to uncheck the 'Full name' check box which makes sense.

Trunk, Svn Rev 1030016