Do not allow to remove the name column, that is not intended.

BUG: 208452

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1028930